Simplified home GET method and added sorting by name logic